@@ -17,7 +17,6 @@
  * 02110-1301, USA.
  */
 
-#include <ZLStringUtil.h>
 #include <ZLUnicodeUtil.h>
 
 #include "Author.h"
@@ -26,18 +25,18 @@ std::set<shared_ptr<Author>,AuthorComparator> Author::ourAuthorSet;
 
 shared_ptr<Author> Author::getAuthor(const std::string &name, const std::string &sortKey) {
 	std::string strippedName = name;
-	ZLStringUtil::stripWhiteSpaces(strippedName);
+	ZLUnicodeUtil::utf8Trim(strippedName);
 	if (strippedName.empty()) {
 		return 0;
 	}
 	std::string strippedKey = sortKey;
-	ZLStringUtil::stripWhiteSpaces(strippedKey);
+	ZLUnicodeUtil::utf8Trim(strippedKey);
 
 	if (strippedKey.empty()) {
 		const std::size_t index = strippedName.find(',');
 		if (index != std::string::npos) {
 			strippedKey = strippedName.substr(0, index);
-			ZLStringUtil::stripWhiteSpaces(strippedKey);
+			ZLUnicodeUtil::utf8Trim(strippedKey);
 		}
 	}
 
